[project]
name = "mcp-bencher"
version = "0.1.0"
description = "A model benchmarking tool using vLLM"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "mcp[cli]>=1.5.0",
    "vllm",
    "requests",
    "pathlib",
    "pytest",
    "tqdm",
    "aiohttp",
    "numpy",
    "huggingface_hub",
    "transformers",
    "pandas",
    "datasets",
]
